# eidosxr-python

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
autogen/: gen_models.sh
eidosxr/: __init__.py  apimodels.py  client.py  common.py  consistency.py  data.py  exceptions.py  features.py  geojson.py  oceanql.py  panel.py  root.py  state.py  theme.py
eidosxr/node/: derived.py  document.py  grid.py  menu.py  plot.py  world.py
eidosxr/node/worldlayer/: __init__.py  common.py  feature.py  gridded.py  label.py  scenegraph.py  seasurface.py  track.py  wmts.py
oceanum/eidos/: __init__.py  base.py  common.py  data.py  features.py  geojson.py  panel.py  root.py  state.py  theme.py  version.py
oceanum/eidos/node/: __init__.py  derived.py  document.py  grid.py  menu.py  plot.py  world.py
oceanum/eidos/node/worldlayer/: common.py  feature.py  gridded.py  label.py  scenegraph.py  sea_surface.py  seasurface.py  track.py  wmts.py
tests/: test_client.py  test_consistency.py
