[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'eidosxr'
description = 'Python bindings and API client for the EIDOS framework. Create, edit and manage EIDOS specs from python.'
readme = 'README.md'
license = {file = 'LICENSE'}
authors = [{name='Oceanum.io', email='support@oceanum.io'}]
dependencies = [
    "oceanum",
    "pydantic",
    "pandas",
    "geopandas",
    "xarray",
    "altair",
    "jinja2",
    "jsonpatch",
    "requests"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = '>=3.9'
dynamic = ['version']

# The code lives in the top-level ``eidosxr`` package (named to avoid the
# unrelated ``eidos`` project on PyPI). The ``oceanum.eidos`` package is a thin
# back-compatibility shim that re-exports ``eidosxr`` into the shared ``oceanum``
# namespace, so ``from oceanum.eidos import ...`` keeps working.
[tool.setuptools.packages.find]
include = ['eidosxr*', 'oceanum.eidos']
namespaces = true

[tool.setuptools.package-data]
'eidosxr._templates' = ['*.j2']

[tool.setuptools.dynamic]
version = {attr = 'eidosxr.version.__version__'}

[tool.setuptools]
license-files = []

[project.urls]
'Homepage' = 'https://oceanum.io'

[project.optional-dependencies]
test=[
    'pytest',
    'pytest-cov',
    'responses',
    'tox'
]
development=[
    'datamodel-code-generator'
]
doc = ['sphinx']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
